feat: Adjudicate reviewer comments.
Updated my code based on reviewer comments.  Encapsulated my checkCollision method, added more comments, and updated some syntax.

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 
 body {
     text-align: center;
-    background-image: url("../images/frog.png");
+    background-image: url(../images/frog.png);
     background-size: auto;
 }
 
